src/objects/Budget_Item__c.object
<CustomObject>
    <fields>
        <fullName>Budget_Month__c</fullName>
        <label>Budget Month</label>
        <referenceTo>Budget_Month__c</referenceTo>
        <relationshipLabel>Budget Items</relationshipLabel>
        <relationshipName>Budget_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Budget_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Plan</label>
        <referenceTo>Budget_Plan__c</referenceTo>
        <relationshipLabel>Budget Items</relationshipLabel>
        <relationshipName>Budget_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Product__c</fullName>
        <label>Budget Product</label>
        <referenceTo>Budget_Product__c</referenceTo>
        <relationshipLabel>Budget Items</relationshipLabel>
        <relationshipName>Budget_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Budget Item</label>
    <nameField>
        <label>Budget Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budget Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>